// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JobStreet Header passes through optional props 1`] = `
<Header
  LogoComponent={[Function]}
  actionTrayProps={
    Object {
      "showSavedJobs": false,
    }
  }
  activeTab="ACTIVE_TAB_HOME"
  authenticationStatus="unauthenticated"
  brandStyles={null}
  country="my"
  headerMessage={
    Object {
      "careerInsights": Object {
        "title": "Career Insights",
        "url": "https://jobstreet.com.my/en/career-insights",
      },
      "classifiedJobs": Object {
        "title": "Classified Jobs",
        "url": "https://jobstreet.com.my/en/job-search/classified-ads.php",
      },
      "companyProfiles": Object {
        "title": "Company Profiles",
        "url": "https://jobstreet.com.my/en/companies/",
      },
      "education": Object {
        "title": "Education",
        "url": "https://www.jobstreeteducation.com.my/",
      },
      "employer": Object {
        "title": "Employer Site",
        "url": "https://jobstreet.com.my/en/cms/employer",
      },
      "freshGradJobs": Object {
        "title": "Fresh Grad Jobs",
        "url": "https://jobstreet.com.my/en/job-search/campus/job-vacancy.php",
      },
      "home": Object {
        "title": "Home",
        "url": "https://jobstreet.com.my",
      },
      "homeUrlText": "JobStreet.com",
      "login": Object {
        "title": "Log in",
        "url": "https://myjobstreet.jobstreet.com.my/login",
      },
      "myJobStreet": Object {
        "title": "MyJobStreet",
        "url": "https://myjobstreet.jobstreet.com.my/home/login.php?site=my",
      },
      "overseasJobs": Object {
        "title": "Overseas Jobs",
        "url": "https://jobstreet.com.my/en/job-search/browse/find-overseas-jobs",
      },
      "seperatorOr": "or",
      "signUp": Object {
        "title": "Sign up",
        "url": "https://myjobstreet.jobstreet.com.my/signup",
      },
    }
  }
  hideNavMenu={false}
  homeUrl="/"
  language="en"
  linkRenderer={[Function]}
  links={
    Array [
      Object {
        "ItemIcon": [Function],
        "title": "MyJobStreet",
        "url": "https://myjobstreet.jobstreet.com.my/home/login.php?site=my",
      },
      Object {
        "ItemIcon": [Function],
        "title": "Company Profiles",
        "url": "https://jobstreet.com.my/en/companies/",
      },
      Object {
        "ItemIcon": [Function],
        "title": "Education",
        "url": "https://www.jobstreeteducation.com.my/",
      },
    ]
  }
  locales={
    Array [
      Object {
        "ItemIcon": [Function],
        "country": "sg",
        "language": "en",
        "languageDisplay": "English",
        "title": "Singapore (English)",
        "url": "https://www.jobstreet.com.sg/",
      },
      Object {
        "ItemIcon": [Function],
        "country": "my",
        "language": "en",
        "languageDisplay": "English",
        "title": "Malaysia (English)",
        "url": "https://www.jobstreet.com.my/",
      },
      Object {
        "ItemIcon": [Function],
        "country": "ph",
        "language": "en",
        "languageDisplay": "English",
        "title": "Philiphines (English)",
        "url": "https://www.jobstreet.com.ph/",
      },
      Object {
        "ItemIcon": [Function],
        "country": "id",
        "language": "en",
        "languageDisplay": "English",
        "title": "Indonesia (English)",
        "url": "https://www.jobstreet.co.id/en/",
      },
      Object {
        "ItemIcon": [Function],
        "country": "id",
        "language": "id",
        "languageDisplay": "Bahasa",
        "title": "Indonesia (Bahasa)",
        "url": "https://www.jobstreet.co.id/",
      },
      Object {
        "ItemIcon": [Function],
        "country": "vn",
        "language": "vi",
        "languageDisplay": "Tiếng Việt",
        "title": "Việt Nam (Tiếng Việt)",
        "url": "https://www.jobstreet.vn/",
      },
    ]
  }
  loginAvailable={false}
  logoProps={
    Object {
      "country": "my",
    }
  }
  menuMessage={
    Object {
      "backToMenu": "Back to Menu",
      "countryAndLanguage": "Country & Language",
      "jobSeekerHeader": "JOB SEEKER",
      "more": "More",
      "moreHeader": "MORE",
      "settingsHeader": "SETTINGS",
    }
  }
  onMenuOpen={[Function]}
/>
`;

exports[`JobStreet Header renders with default props 1`] = `
<Header
  LogoComponent={[Function]}
  activeTab="ACTIVE_TAB_HOME"
  authenticationStatus="unauthenticated"
  brandStyles={null}
  country="my"
  headerMessage={
    Object {
      "careerInsights": Object {
        "title": "Career Insights",
        "url": "https://jobstreet.com.my/en/career-insights",
      },
      "classifiedJobs": Object {
        "title": "Classified Jobs",
        "url": "https://jobstreet.com.my/en/job-search/classified-ads.php",
      },
      "companyProfiles": Object {
        "title": "Company Profiles",
        "url": "https://jobstreet.com.my/en/companies/",
      },
      "education": Object {
        "title": "Education",
        "url": "https://www.jobstreeteducation.com.my/",
      },
      "employer": Object {
        "title": "Employer Site",
        "url": "https://jobstreet.com.my/en/cms/employer",
      },
      "freshGradJobs": Object {
        "title": "Fresh Grad Jobs",
        "url": "https://jobstreet.com.my/en/job-search/campus/job-vacancy.php",
      },
      "home": Object {
        "title": "Home",
        "url": "https://jobstreet.com.my",
      },
      "homeUrlText": "JobStreet.com",
      "login": Object {
        "title": "Log in",
        "url": "https://myjobstreet.jobstreet.com.my/login",
      },
      "myJobStreet": Object {
        "title": "MyJobStreet",
        "url": "https://myjobstreet.jobstreet.com.my/home/login.php?site=my",
      },
      "overseasJobs": Object {
        "title": "Overseas Jobs",
        "url": "https://jobstreet.com.my/en/job-search/browse/find-overseas-jobs",
      },
      "seperatorOr": "or",
      "signUp": Object {
        "title": "Sign up",
        "url": "https://myjobstreet.jobstreet.com.my/signup",
      },
    }
  }
  hideNavMenu={false}
  homeUrl="/"
  language="en"
  linkRenderer={[Function]}
  links={
    Array [
      Object {
        "ItemIcon": [Function],
        "title": "MyJobStreet",
        "url": "https://myjobstreet.jobstreet.com.my/home/login.php?site=my",
      },
      Object {
        "ItemIcon": [Function],
        "title": "Company Profiles",
        "url": "https://jobstreet.com.my/en/companies/",
      },
      Object {
        "ItemIcon": [Function],
        "title": "Education",
        "url": "https://www.jobstreeteducation.com.my/",
      },
    ]
  }
  locales={
    Array [
      Object {
        "ItemIcon": [Function],
        "country": "sg",
        "language": "en",
        "languageDisplay": "English",
        "title": "Singapore (English)",
        "url": "https://www.jobstreet.com.sg/",
      },
      Object {
        "ItemIcon": [Function],
        "country": "my",
        "language": "en",
        "languageDisplay": "English",
        "title": "Malaysia (English)",
        "url": "https://www.jobstreet.com.my/",
      },
      Object {
        "ItemIcon": [Function],
        "country": "ph",
        "language": "en",
        "languageDisplay": "English",
        "title": "Philiphines (English)",
        "url": "https://www.jobstreet.com.ph/",
      },
      Object {
        "ItemIcon": [Function],
        "country": "id",
        "language": "en",
        "languageDisplay": "English",
        "title": "Indonesia (English)",
        "url": "https://www.jobstreet.co.id/en/",
      },
      Object {
        "ItemIcon": [Function],
        "country": "id",
        "language": "id",
        "languageDisplay": "Bahasa",
        "title": "Indonesia (Bahasa)",
        "url": "https://www.jobstreet.co.id/",
      },
      Object {
        "ItemIcon": [Function],
        "country": "vn",
        "language": "vi",
        "languageDisplay": "Tiếng Việt",
        "title": "Việt Nam (Tiếng Việt)",
        "url": "https://www.jobstreet.vn/",
      },
    ]
  }
  loginAvailable={false}
  logoProps={
    Object {
      "country": "my",
    }
  }
  menuMessage={
    Object {
      "backToMenu": "Back to Menu",
      "countryAndLanguage": "Country & Language",
      "jobSeekerHeader": "JOB SEEKER",
      "more": "More",
      "moreHeader": "MORE",
      "settingsHeader": "SETTINGS",
    }
  }
  onMenuOpen={[Function]}
/>
`;
